# tidal-dl

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .tidal-dl.json  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.build.yml  docker-compose.release.yml  docker-compose.yml  notes.txt  pyproject.toml  requierments.txt  tidal-login.sh
.cursor/skills/tidal-dl-pro-local-http-api/: SKILL.md
.github/workflows/: dockerhub-readme-push.yml  image-build-Main.yml  image-build-dev.yml  image-build-development.yml  image.yml
apache2/mods-available/: deflate.conf
cgi-bin/: .tidal-dl.json  main.py  py38.cgi  tidaldl.py
copy-files/: requierments.txt  settings.py  tidal-login.sh
copy-files/apache2/mods-available/: deflate.conf
copy-files/cgi-bin/: .tidal-dl.json  main.py  tidaldl.py
copy-files/lib/: hoge.py
copy-files/webpage/: index.html
scripts/: docker-entrypoint.sh  start-web.sh
tests/: conftest.py  test_download_cancellation.py  test_unified_state.py  test_web_api.py
tidal_dl_ng/: __init__.py  download.py  gui.py  metadata.py
tidal_dl_ng/helper/: tidal.py
tidal_dl_ng/model/: cfg.py
tidal_dl_ng/ui/: dialog_version.py  dialog_version.ui  main.py  main.ui
web/: index.html  main.py  ui_quality.py  unified_state.py
web/engines/: __init__.py  base.py  tdlng.py  tiddl.py
webpage/: index.html
